style.css
:root {
  --salmon: hsl(353.7, 70.5%, 70.8%);
}

body {
  font-family: 'Cabin', sans-serif;
  line-height: 150%;
}

a {
  color: var(--salmon);
}

section {
  max-width: 600px;
  padding: 2em 30px;
  margin: 0 auto;
}

header {
  background-color: var(--salmon);
  color: white;
  padding-top: 2em;
}

main > section {
  box-shadow: 0 1px 3px gray;
  margin-top: -4em;
  background-color: white;
}

footer {
  color: gray;
}

svg {
  max-width: 100%;
}

#Coco #Body {
  transform-origin: 20% 50%;
  animation: breathe 3s ease-in infinite alternate;
}

@keyframes breathe {
   50% { transform: rotate(0deg) }
  100% { transform: rotate(-2deg) }
}

#Coco #Left-Pupil, #Coco #Right-Pupil {
  animation: look-around 13s ease infinite alternate;
}

@keyframes look-around {
   49% { transform: translate(0px, 0px); opacity: 1; }
   52% { transform: translate(4px, 3px); opacity: .9; }
  100% { transform: translate(4px, 3px); opacity: .9; }
}

#Coco #Head {
  transform-origin: 50% 50%;
  animation: tilt 17s cubic-bezier(.3,-0.3,.7,1.3) infinite alternate;
}

@keyframes tilt {
   45% { transform: rotate(0deg) }
   55% { transform: rotate(4deg) }
  100% { transform: rotate(4deg) }
}

body#banner {
  background-color: var(--salmon);
  color: white;
  padding: 8vw;
  font-size: 3vw;
}

body#banner #coco {
  width: 50vw;
  height: 26vw;
}

